force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt.object-meta.xml
<CustomObject>
    <description>Populates default values for fields on the target object that do not have corresponding fields on the interim</description>
    <label>Merge Interim Card Default Value</label>
    <pluralLabel>Merge Interim Card Default Values</pluralLabel>
</CustomObject>