force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/fields/ucinn_ascendv2__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_API_Name__c</fullName>
    <description>Field API Name of the field to populate with a default value.</description>
    <inlineHelpText>Field API Name of the field to populate with a default value.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>