force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/fields/ucinn_ascendv2__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Value__c</fullName>
    <description>Value that will be assigned to the field to populate.</description>
    <inlineHelpText>Value that will be assigned to the field to populate.</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>