force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/fields/ucinn_ascendv2__Manual_Merge_Interim_Card__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manual_Merge_Interim_Card__c</fullName>
    <description>For relating this default value to a card.</description>
    <inlineHelpText>For relating this default value to a card.</inlineHelpText>
    <label>Merge Interim Card</label>
    <referenceTo>ucinn_ascendv2__Manual_Merge_Interim_Card__mdt</referenceTo>
    <relationshipLabel>Merge Interim Card Default Values</relationshipLabel>
    <relationshipName>Manual_Merge_Interim_Card_Default_Values</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>