force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/fields/ucinn_ascendv2__Map_To_Parent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Map_To_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Map this field to the parent object.</description>
    <inlineHelpText>Map this field to the parent object.</inlineHelpText>
    <label>Map To Parent</label>
    <type>Checkbox</type>
</CustomField>