force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Interim_Card_Default_Value__mdt/listViews/ucinn_ascendv2__Merge_Interim_Default_Values_Main_Fields.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Merge_Interim_Default_Values_Main_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Interim_Card__c</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <columns>ucinn_ascendv2__Field_Value__c</columns>
    <columns>ucinn_ascendv2__Map_To_Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>Merge Interim Default Values Main Fields</label>
    <language>en_US</language>
</ListView>